move to lowercase

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "binary": {
-    "module_name": "getSocketHandleAddress",
+    "module_name": "getsockethandleaddress",
     "module_path": "build/{configuration}/"
   },
   "scripts": {
