Add a missing dependency

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "repository": "github:clshortfuse/getsockethandleaddress",
   "license": "ISC",
-  "gypfile": true
+  "gypfile": true,
+  "dependencies": {
+    "bindings": "^1.3.0"
+  }
 }
